// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch defaultChecked 1`] = `
<span
  class="za-switch checked"
>
  <input
    checked=""
    class="za-switch-input"
    type="checkbox"
  />
</span>
`;

exports[`Switch renders correctly 1`] = `
<span
  class="za-switch"
>
  <input
    class="za-switch-input"
    type="checkbox"
  />
</span>
`;
